Made LUBM parameters more similar to the ones in the SSWS eval.